Set baseurl as /hongmun

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,11 +13,11 @@
         <!-- 메뉴 영역 -->
         <nav id="menu-wrap" hidden>
             <ul class="navbar-nav">
-                <li><a href="/sub1.html"><span class='navi-title' data-val='1'>본원 소개</span></a></li>
-                <li><a href="/sub2.html"><span class='navi-title' data-val='2'>의료진 소개</span></a></li>
-                <li><a href="/sub3.html"><span class='navi-title' data-val='3'>진료 안내</span></a></li>
-                <li><a href="/sub4.html"><span class='navi-title' data-val='4'>검사 안내</span></a></li>
-                <li><a href="/sub5.html"><span class='navi-title' data-val='5'>오시는 길</span></a></li>
+                <li><a href="sub1.html"><span class='navi-title' data-val='1'>본원 소개</span></a></li>
+                <li><a href="sub2.html"><span class='navi-title' data-val='2'>의료진 소개</span></a></li>
+                <li><a href="sub3.html"><span class='navi-title' data-val='3'>진료 안내</span></a></li>
+                <li><a href="sub4.html"><span class='navi-title' data-val='4'>검사 안내</span></a></li>
+                <li><a href="sub5.html"><span class='navi-title' data-val='5'>오시는 길</span></a></li>
             </ul>
         </nav>
         <!-- //메뉴 영역 -->
