--- a/_includes/overlay.html
+++ b/_includes/overlay.html
@@ -3,13 +3,13 @@
         <nav id='snsbtn-wrap'>
             <ul class='snsbtn'>
                 <li class='snsbtn-list'><a href='http://blog.naver.com/gshongmun' target='_blank'><img
-                            src='images/blog_icon.png' class='snsImg'></a></li>
+                            src='assets/images/blog_icon.png' class='snsImg'></a></li>
                 <li class='snsbtn-list'><a href='http://pf.kakao.com/_HQQbG' target='_blank'><img
-                            src='images/talk_icon.png' class='snsImg'></a></li>
+                            src='assets/images/talk_icon.png' class='snsImg'></a></li>
                 <li class='snsbtn-list'><a href='http://www.instagram.com/gshongmun' target='_blank'><img
-                            src='images/instagram_icon.png' class='snsImg'></a></li>
+                            src='assets/images/instagram_icon.png' class='snsImg'></a></li>
                 <li class='snsbtn-list'><a href='http://www.facebook.com/gshongmun' target='_blank'><img
-                            src='images/face_icon.png' class='snsImg'></a></li>
+                            src='assets/images/face_icon.png' class='snsImg'></a></li>
             </ul>
         </nav>
     </section>
