--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="row">
             <span>주소 : 경기도 의정부시 의정부동 남평프라자 8층 / 원장 : 김유용 외 2명 / 상호 : 홍문외과의원<br /></span><span>사업자등록번호 : 127-90-20073
                 / 대표전화 : 031-844-8275</span><span></span><span></span>
-            <p class="credit-link">Copyright © ILikeDoctor . All Rights Reserved. </p>
+            <p class="credit-link">Copyright © 홍문외과의원 . All Rights Reserved. </p>
         </div>
     </div>
 </footer>
