--- a/_includes/overlay.html
+++ b/_includes/overlay.html
@@ -8,8 +8,8 @@
                             src='assets/images/talk_icon.png' class='snsImg'></a></li>
                 <li class='snsbtn-list'><a href='http://www.instagram.com/gshongmun' target='_blank'><img
                             src='assets/images/instagram_icon.png' class='snsImg'></a></li>
-                <li class='snsbtn-list'><a href='http://www.facebook.com/gshongmun' target='_blank'><img
-                            src='assets/images/face_icon.png' class='snsImg'></a></li>
+                <li class='snsbtn-list'><a href='tel:0318448275' target='_blank'><img
+                            src='assets/images/phone_icon.png' class='snsImg'></a></li>
             </ul>
         </nav>
     </section>
