Add automatic popup banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,8 @@
 
 	{% include footer.html %}
 
-	{% include overlay.html %}
+        {% include overlay.html %}
+        {% include banner-popup.html %}
 
 </body>
 
