Center modal popup

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -655,13 +655,16 @@
 		z-index: 12;
 	}
 
-	#modal_wrap {
-		position:absolute;
-		background:rgba(0,0,0,0.2);
-		border-radius:14px;
-		padding:4px;
-		z-index: 12;
-	}
+        #modal_wrap {
+                position:fixed;
+                top:50%;
+                left:50%;
+                transform:translate(-50%, -50%);
+                background:rgba(0,0,0,0.2);
+                border-radius:14px;
+                padding:4px;
+                z-index: 13;
+        }
 
 	#modal_content {
 		border-radius:8px;
